# Linux-notes

./: CMake-notes.md  README.md  arm_cpu_performance_tuning.md  asciidoc_note.adoc  bash_notes.md  clang-plugin.md  cpp_language_notes.md  cpp_meta_programming_tricks.md  custom-theme.yml  lldb_notes.md  systemc_notes.md
asciidoc/: Makefile  additional_content.adoc  asciidoc_note.adoc
asciidoc_slide/: README.md  my_presentation.adoc
meta_programming_example/: ct_key_type_map.cpp  ct_key_value_map.cpp  int_seq_get.cpp
sc_example/: CMakeLists.txt  test_sc_int_uint.cpp  test_sc_struct.cpp
sc_example/cmake/: FindSystemC.cmake
sc_example/cmake/dependencies/: DownloadSystemC.cmake
sc_example/dependencies/: CMakeLists.txt
xml/: books.xml  books.xsd  books_only.xml  books_only.xsd  books_only_1.xml  books_only_2.xml  example.py  output.xml  validate_xml.py
